2003-01-08  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (systemMessage): fixed problem displaying error messages in fullscreen mode
	* src/win32/Win32.cpp: added support to other resolutions for fullscreen mode

2003-01-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (detectMMX): added support for AMD CPUs
	* src/win32/TileViewer.cpp: now shows all tiles in 256 mode
	* src/elf.cpp (elfCleanUp): fixed crash when reloading an ELF file
	* src/win32/Commands.cpp: added interframe blending commands
	* src/win32/Win32.cpp: added interframe blending support
	* src/SDL.cpp: added interframe blending support

2003-01-03  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added bilinear filter support
	* src/SDL.cpp: added bilinear filter support

2002-12-11  Forgotten  <forgotten@users.sourceforge.net>

	* src/Flash.cpp (flashSetSize): fixed reversed device ID and manufacturer ID

2002-12-09  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (fileExportGSASnapshot): change default title to internal name
	* src/win32/Win32.cpp (WindowProc): added sound volume option
	* src/win32/Win32.cpp (updateFileMenu): allow pausing even if not emulating yet
	* src/win32/Win32.cpp: added AVI writing support

2002-12-02  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Commands.cpp: added missing options
	* src/win32/Win32.cpp (updateFilter): added 32-bit mode support for Kreed filters
	* src/SDL.cpp (main): added 32-bit mode support for Kreed filters
	* src/2xSaI.cpp (Scale_2xSaI): added 32-bit mode support

2002-12-01  Forgotten  <forgotten@users.sourceforge.net>

	* src/tvmode.cpp (TVMode32): 32-bit mode support
	* src/simple2x.cpp (Simple2x32): 32-bit mode support
	* src/pixel.cpp (Pixelate32): 32-bit mode support
	* src/motionblur.cpp (MotionBlur32): 32-bit mode support
	* src/admame.cpp (AdMame2x32): 32-bit mode support