@@ -101,7 +101,8 @@ struct {
   { "OptionsVideoLayersOBJWIN", ID_OPTIONS_VIDEO_LAYERS_OBJWIN },
   { "OptionsEmulatorAssociate", ID_OPTIONS_EMULATOR_ASSOCIATE },
   { "OptionsEmulatorDirectories", ID_OPTIONS_EMULATOR_DIRECTORIES },
-  { "OptionsEmulatorSelectBIOSFiles", ID_OPTIONS_EMULATOR_SELECTBIOSFILE },
+  { "OptionsEmulatorSelectBIOSFile", ID_OPTIONS_EMULATOR_SELECTBIOSFILE },
+  { "OptionsEmulatorShowSpeed", ID_OPTIONS_EMULATOR_SHOWSPEED },
   { "OptionsEmulatorSpeedupToggle", ID_OPTIONS_EMULATOR_SPEEDUPTOGGLE },
   { "OptionsEmulatorRemoveIntros", ID_OPTIONS_EMULATOR_REMOVEINTROSGBA },
   { "OptionsEmulatorSaveAuto", ID_OPTIONS_EMULATOR_SAVETYPE_AUTOMATIC },
