@@ -617,13 +617,15 @@
 #define ID_OPTIONS_FILTER_INTERFRAMEBLENDING_MOTIONBLUR 40189
 #define ID_OPTIONS_FILTER_INTERFRAMEBLENDING_SMART 40190
 #define ID_OPTIONS_VIDEO_FULLSCREEN     40191
+#define ID_OPTIONS_VIDEO_TRIPLEBUFFERING 40192
+#define ID_OPTIONS_EMULATOR_SHOWSPEED   40193
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        141
-#define _APS_NEXT_COMMAND_VALUE         40192
+#define _APS_NEXT_COMMAND_VALUE         40194
 #define _APS_NEXT_CONTROL_VALUE         1241
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
